2007-03-27  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* pretty much rewrote the whole application
	* three different threads now for receiving requests, building
	events, and sending events
	* parameter 'dataBufSize' renamed 'msgBufferSize'
	* add class evf::BUEvent
	* events are (pre-) built in a queue
	* option 'replay': build the queue once, then keep rerunning on
	those events
	* option 'crc': do / don't calculate crc check
	* in PLAYBACK mode, I see a strange error in the
	BU_DISCARD_Callback. To be investigated
	
2007-03-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-02
	* replace 'TimerListener' interface, use dedicated WorkLoop
	instead for monitoring (a la real BU)

2007-03-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-01
	* fix to random fedsize determination (back to log-normal).

2007-03-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* compliant with FWCore reorganization of 140 series.
	* based on evf::StateMachine provided by EvventFilter/Utilities
	V00-12-00
	

2007-02-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-11
	* provide empty stopAction, according to changes to
	Utilities/EPStateMachine.
	
2006-11-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-10
	* remove debug() method
	* remove check_event_data() method
	* fix stopTimer()/initTimer()
	* add BU::reset() to set all counters and non-counters to their
	'configured' state
	* verify that "configure - enable - halt - configure - enable"
	sequence is functional

2006-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-09
	* bug fix

2006-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-08
	* fix the way the internal fed buffers are filled in PLAYBACK
	mode. It wouldn't have worked for more than 64 feds (so it
	doesn't matter much for MTCC I/II data)
	
